trying to fix spacing and spelling tweaks

--- a/styles/incubation.css
+++ b/styles/incubation.css
@@ -23,7 +23,7 @@
     align-items: center;
     font-size: 2em;
     font-weight: bold;
-    padding: 30px 0px 0px 0px;
+    margin-top: 15px;
 }
 
 .incubation-title {
@@ -68,7 +68,6 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0px 20px 0px;
     color: white;
     border: 2px solid black;
     background-color: rgba(28, 92, 22, 0.836);
@@ -94,7 +93,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0px 20px 0px;
+    padding: 10px 0px 10px 0px;
 }
 
 #release-button {
